# beskromnygpt

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  БескромныйAI_PRD_v3.0.md
bot/: __init__.py  main.py
bot/handlers/: commands.py  editor.py  feedback.py
core/: __init__.py  config.py
core/analytics/: __init__.py  formatter.py  livedune.py
core/digest/: alerts.py  generator.py  pdf.py  scraper.py  sources.py
core/feedback/: db.py
core/queue/: db.py
core/rag/: retrieval.py  store.py
core/voice/: engine.py  profile.py  prompts.py
docs/: WORKPLAN.md  editor_guide.md  sources_for_manus.md
scripts/: build_voice_profile.py  fetch_channel_bot_api.py  fetch_livedune_posts.py  fetch_podcast_transcripts.py  fetch_youtube_transcripts.py  generate_digest.py  load_channel_archive.py  load_transcripts.py  migrate_embeddings.py  run_daily_digest.sh  scrape_articles.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/architecture/: page.tsx
web/src/app/chat/: page.tsx
web/src/app/economics/: page.tsx
web/src/components/: Nav.tsx
