[project]
name = "beskromny-gpt"
version = "0.1.0"
description = "Голосовая модель и машина полуавтоматизации личного бренда Дмитрия Бескромного"
requires-python = ">=3.10"

dependencies = [
    # AI — all LLM calls go through OpenRouter via httpx (no SDK needed)
    "chromadb>=0.5",
    "sentence-transformers>=3.0",  # local multilingual embeddings for ChromaDB

    # Telegram
    "python-telegram-bot>=21",
    "telethon>=1.36",

    # Data
    "pandas>=2.2",

    # Transcription
    "openai-whisper>=20240930",

    # Digest PDF rendering
    "weasyprint>=62",
    "markdown>=3.5",

    # Utils
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["bot*", "core*", "scripts*"]
exclude = ["web*", "data*", "docs*", "venv*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
